@@ -149,7 +149,7 @@ env.Append(SCANNERS=[SWIGScanner])
 # internationalization (ardour.org provided the initial idea)
 #
 
-po_args = ['msgmerge', '-q', '--update', '$TARGET', '$SOURCE']
+po_args = ['msgmerge', '-q', '--update', '--backup=none', '$TARGET', '$SOURCE']
 po_bld = Builder (action = Action([po_args], 'Updating translation $TARGET from $SOURCES'))
 env.Append(BUILDERS = {'PoBuild' : po_bld})
 
