@@ -112,42 +112,6 @@ void DownloadManager::on(TimerManagerListener::Second, uint32_t aTick) throw() {
 	}
 }
 
-void QueueManager::FileMover::moveFile(const string& source, const string& target) {
-	Lock l(cs);
-	files.push_back(make_pair(source, target));
-	if(!active) {
-		active = true;
-		start();
-	}
-}
-
-int QueueManager::FileMover::run() {
-	for(;;) {
-		FilePair next;
-		{
-			Lock l(cs);
-			if(files.empty()) {
-				active = false;
-				return 0;
-			}
-			next = files.back();
-			files.pop_back();
-		}
-		try {
-			File::renameFile(next.first, next.second);
-		} catch(const FileException&) {
-			try {
-				// Try to just rename it to the correct name at least
-				string newTarget = Util::getFilePath(next.first) + Util::getFileName(next.second);
-				File::renameFile(next.first, newTarget);
-				LogManager::getInstance()->message(str(F_("%1% renamed to %2%") % next.first % newTarget));
-			} catch(const FileException& e) {
-				LogManager::getInstance()->message(str(F_("Unable to rename %1%: %2%") % next.first % e.getError()));
-			}
-		}
-	}
-}
-
 void DownloadManager::removeConnection(UserConnectionPtr aConn) {
 	dcassert(aConn->getDownload() == NULL);
 	aConn->removeListener(this);
